# agent-skills

./: .gitignore  LICENSE  README.md  SKILL.md  TUTORIAL.md  ai-catalog.md  calling-conventions.md  examples.md  privacy-tools.md  pyproject.toml  uai.yaml.example
legacy/: SKILL.md  calling-conventions.md  examples.md  team-patterns.md
src/uai/: __init__.py  __main__.py
src/uai/cli/: __init__.py  app.py  edit_applier.py  input_expander.py  input_handler.py  slash_commands.py  streaming.py  theme.py
src/uai/cli/commands/: __init__.py  ask.py  chat.py  code.py  config_cmd.py  connect.py  interactive.py  orchestrate.py  providers_cmd.py  quota.py  sessions.py  setup.py  status.py
src/uai/core/: __init__.py  auth.py  config.py  context.py  errors.py  executor.py  fallback.py  project_context.py  quota.py  router.py
src/uai/models/: __init__.py  config.py  context.py  provider.py  quota.py  request.py
src/uai/orchestration/: __init__.py  cost_guard.py  patterns.py  team.py
src/uai/providers/: __init__.py  base.py  claude.py  codex.py  deepseek.py  gemini.py  groq.py  ollama.py  qwen.py
src/uai/utils/: __init__.py  health.py  installer.py  json_parser.py  logging.py  memmon.py  retry.py
tests/: conftest.py
tests/integration/: test_ask_pipeline.py
tests/unit/: test_auth.py  test_config.py  test_context.py  test_errors.py  test_executor_stream.py  test_fallback.py  test_input_expander.py  test_json_parser.py  test_project_context.py  test_quota.py  test_router.py  test_slash_commands.py  test_streaming.py  test_theme.py
tests/unit/test_providers/: test_qwen.py  test_streaming.py
